fix: browser scrollbar rm

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@ body{
 
 body::-webkit-scrollbar {
     display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
 }
 
 .ql-editor{
